--- a/app/templates/ssh_result.html
+++ b/app/templates/ssh_result.html
@@ -10,6 +10,7 @@
                 <th>Version</th>
                 <th>Build</th>
                 <th>Architecture</th>
+                <th>Time</th>
             </tr>
         </thead>
         <tbody>
@@ -20,6 +21,7 @@
                     <td>{{ result.version }}</td>
                     <td>{{ result.build }}</td>
                     <td>{{ result.architecture }}</td>
+                    <td>{{ result.time}}</td>
                 </tr>
             {% endfor %}
         </tbody>
